--- a/css/screen.css
+++ b/css/screen.css
@@ -115,3 +115,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+button {
+  border: none;
+  padding: 0;
+}
+
+form input, form textarea {
+  border: solid 0.063em #ddd;
+  /* 1 / 16 = 0.063 */
+}
