--- a/css/screen.css
+++ b/css/screen.css
@@ -157,6 +157,10 @@ header, footer, main, section {
   padding: 10px 5%;
 }
 
+#header h1 {
+  float: left;
+}
+
 #nav {
   display: none;
   position: absolute;
@@ -172,8 +176,6 @@ header, footer, main, section {
 #nav.opened {
   display: block;
 }
-
-#nav li {}
 
 #nav a {
   text-transform: uppercase;
@@ -206,7 +208,91 @@ header, footer, main, section {
   display: inline-block;
 }
 
+
+/* Responsive menu button */
+
+.menu-button {
+  position: relative;
+  float: right;
+  z-index: 9999;
+  width: 40px;
+  height: 30px;
+  background: none;
+  display: inline-block;
+  /*display: flex;*/
+  transition: .3s;
+  cursor: pointer;
+}
+
+.menu-button span {
+  position: relative;
+  display: inline-block;
+  width: 80%;
+  height: 3px;
+  margin: 10%;
+  background: #b31178;
+  border-radius: 0.28571rem;
+  transition: background 0.3s 0.5s ease;
+}
+
+.menu-button span:before, .menu-button span:after {
+  display: inline-block;
+  width: 100%;
+  height: 3px;
+  background: #b31178;
+  border-radius: 0.28571em;
+  transition: 0.3s;
+  position: absolute;
+  left: 0;
+  content: '';
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+}
+
+.menu-button span:before {
+  top: 10px;
+}
+
+.menu-button span:after {
+  top: -10px;
+}
+
+.menu-button.close span {
+  transition: background 0.3s 0s ease;
+  background: transparent;
+}
+
+.menu-button.close span:before, .menu-button.close span:after {
+  transition: top 0.3s ease, -webkit-transform 0.3s 0.5s ease;
+  transition: top 0.3s ease, transform 0.3s 0.5s ease;
+  top: 5%;
+  left: -5%;
+  width: 110%;
+}
+
+.menu-button.close span:before {
+  -webkit-transform: rotate3d(0, 0, 1, 45deg);
+  transform: rotate3d(0, 0, 1, 45deg);
+}
+
+.menu-button.close span:after {
+  -webkit-transform: rotate3d(0, 0, 1, -45deg);
+  transform: rotate3d(0, 0, 1, -45deg);
+}
+
 .content {
   padding: 0.625em 5%;
   /*10 / 16 = 0.625*/
+}
+
+.content h2 {
+  padding: 1.25em 0;
+  /*20 / 16 = 1.25;*/
+}
+
+#footer {
+  margin-top: 20px;
+  padding: 10px 5%;
+  color: #fff;
+  background-color: #010101;
 }
