--- a/css/screen.css
+++ b/css/screen.css
@@ -348,3 +348,26 @@ header, footer, main, section {
 #timeline li li {
   padding: 0;
 }
+
+/* Portfolio */
+
+#portfolio {
+  float: left;
+  width: 100%;
+}
+
+#portfolio .portfolio-entry {
+  float: left;
+  width: 100%;
+  padding: 0.625em 5%;
+}
+
+#portfolio .portfolio-entry:nth-child(2n+1) {
+  background-color: #e1e6f2;
+}
+
+#portfolio .categories li, #portfolio .team li {
+  display: inline;
+  font-size: 0.875em;
+  /* 14 / 16 = 0.875 */
+}
