--- a/css/screen.css
+++ b/css/screen.css
@@ -153,8 +153,8 @@ header, footer, main, section {
   display: block;
   position: relative;
   background-color: #fff;
-  box-shadow: 0px 5px 5px #e1e6f2;
-  padding: 10px 5%;
+  box-shadow: 0 0.3125em 0.3125em #e1e6f2;
+  padding: 0.625em 5%;
 }
 
 #header h1 {
@@ -168,8 +168,8 @@ header, footer, main, section {
   left: 0;
   width: 100%;
   background-color: #fff;
-  box-shadow: 0px 5px 5px #e1e6f2;
-  padding: 16px 5%;
+  box-shadow: 0 0.3125em 0.3125em #e1e6f2;
+  padding: 1em 5%;
   transition: display 0.2s;
 }
 
@@ -180,7 +180,7 @@ header, footer, main, section {
 #nav a {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 0 0 10px;
+  padding: 0 0 0.625em;
 }
 
 #nav a:hover {
@@ -189,7 +189,7 @@ header, footer, main, section {
 }
 
 #nav .menu {
-  margin-bottom: 10px;
+  margin-bottom: 0.625em;
   text-align: center;
 }
 
@@ -211,8 +211,8 @@ header, footer, main, section {
 }
 
 .facebook, .linkedin {
-  width: 16px;
-  height: 16px;
+  width: 1em;
+  height: 1em;
 }
 
 .facebook {
@@ -232,8 +232,8 @@ header, footer, main, section {
   position: relative;
   float: right;
   z-index: 9999;
-  width: 40px;
-  height: 30px;
+  width: 2.5em;
+  height: 2em;
   background: none;
   display: inline-block;
   /*display: flex;*/
@@ -245,7 +245,7 @@ header, footer, main, section {
   position: relative;
   display: inline-block;
   width: 80%;
-  height: 3px;
+  height: 0.1875em;
   margin: 10%;
   background: #b31178;
   border-radius: 0.28571rem;
@@ -255,7 +255,7 @@ header, footer, main, section {
 .menu-button span:before, .menu-button span:after {
   display: inline-block;
   width: 100%;
-  height: 3px;
+  height: 0.1875em;
   background: #b31178;
   border-radius: 0.28571em;
   transition: 0.3s;
@@ -267,11 +267,11 @@ header, footer, main, section {
 }
 
 .menu-button span:before {
-  top: 10px;
+  top: 0.625em;
 }
 
 .menu-button span:after {
-  top: -10px;
+  top: -0.625em;
 }
 
 .menu-button.close span {
@@ -303,13 +303,17 @@ header, footer, main, section {
 }
 
 .content h2 {
-  padding: 1.25em 0;
-  /*20 / 16 = 1.25;*/
+  padding: 0.625em 0;
+  /* 10 / 16 = 0.625 */
+}
+
+#page-title {
+  padding: 0.625em 5%;
 }
 
 #footer {
-  margin-top: 20px;
-  padding: 10px 5%;
+  margin-top: 1.25em;
+  padding: 0.625em 5%;
   color: #fff;
   background-color: #010101;
 }
