--- a/css/screen.css
+++ b/css/screen.css
@@ -233,7 +233,7 @@ header, footer, main, section {
   float: right;
   z-index: 9999;
   width: 2.5em;
-  height: 2em;
+  height: 2.2em;
   background: none;
   display: inline-block;
   /*display: flex;*/
@@ -255,7 +255,7 @@ header, footer, main, section {
 .menu-button span:before, .menu-button span:after {
   display: inline-block;
   width: 100%;
-  height: 0.1875em;
+  height: 100%;
   background: #b31178;
   border-radius: 0.28571em;
   transition: 0.3s;
