--- a/css/screen.css
+++ b/css/screen.css
@@ -461,3 +461,27 @@ header, footer, main, section {
   transition: 0.3s;
   cursor: pointer;
 }
+
+
+/*
+  States of the browser and user access
+  conditions.
+  Hint: these tend to be:
+  1. Driven by media queries
+  2. Influenced by JavaScript
+  3. Organized by Base, Layout, Module, State
+*/
+
+@media screen and (min-width: 375px) {}
+
+@media screen and (min-width: 640px) {}
+
+@media screen and (min-width: 860px) {
+  /*
+    1080 pixel grid w/ 80px margins (160)
+    Columns:
+    Gutters:
+    Primary module:
+    Secondary modul:
+  */
+}
