--- a/css/screen.css
+++ b/css/screen.css
@@ -475,6 +475,10 @@ header, footer, main, section {
 @media screen and (min-width: 375px) {}
 
 @media screen and (min-width: 640px) {
+  /*General*/
+  .content {
+    padding: 1.125em 5%;
+  }
   /* Resume */
   #resume {
     float: left;
