--- a/css/screen.css
+++ b/css/screen.css
@@ -495,6 +495,7 @@ header, footer, main, section {
   /*Portfolio*/
   #portfolio .portfolio-entry {
     width: 50%;
+    padding: 1.125em 5%;
   }
   #portfolio .portfolio-entry:nth-child(2n+1) {
     clear: left;
