--- a/css/screen.css
+++ b/css/screen.css
@@ -67,7 +67,7 @@ table {
 */
 
 html {
-  font-family: 'Lato', Helvetica, Arial, serif;
+  font-family: 'Lato', Helvetica, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.125em;
   /* 18 / 16 = 1.125 */
@@ -147,6 +147,23 @@ img, video, audio {
 header, footer, main, section {
   float: left;
   width: 100%;
+}
+
+.cssgrid body {
+  display: grid;
+  grid-template-rows: min-content;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.cssgrid main {
+  display: grid;
+  grid-template-rows: min-content;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.cssgrid header, .cssgrid footer, .cssgrid main, .cssgrid section, .cssgrid #page-title {
+  float: none;
+  grid-column: 1/5;
 }
 
 #header {
@@ -480,7 +497,7 @@ header, footer, main, section {
 
 @media screen and (min-width: 640px) {
   /*General*/
-  .content {
+  .content, #page-title {
     padding: 1.125em 5%;
   }
   /* Resume */
@@ -519,6 +536,14 @@ header, footer, main, section {
   }
   #contact .content:nth-child(2n+1) {
     margin-right: 5%;
+  }
+  .cssgrid #contact-info {
+    width: 100%;
+    grid-column: 1/3;
+  }
+  .cssgrid #contact-form {
+    width: 100%;
+    grid-column: 3/5;
   }
 }
 
