Add floatleft, width 100% to textual block elements; They're not showing correctly in chrome

--- a/css/screen.css
+++ b/css/screen.css
@@ -330,6 +330,8 @@ header, footer, main, section {
 }
 
 .content h3, h4, h5, h6, p {
+  float:left;
+  width:100%;
   padding-bottom: 0.625em;
   /* 10 / 16 = 0.625 */
 }
