--- a/css/screen.css
+++ b/css/screen.css
@@ -175,23 +175,28 @@ header, footer, main, section {
 }
 
 #header h1 {
+  position: relative;
   float: left;
+  z-index: 2;
 }
 
 #nav {
-  display: none;
+  opacity: 0;
+  overflow: hidden;
   position: absolute;
+  z-index: -1;
   top: 100%;
   left: 0;
   width: 100%;
   background-color: #fff;
   box-shadow: 0 0.3125em 0.3125em #e1e6f2;
   padding: 1em 5%;
-  transition: display 0.2s;
 }
 
 #nav.opened {
-  display: block;
+  opacity: 1;
+  z-index: auto;
+  transition: 0.4s;
 }
 
 #nav li {
@@ -423,8 +428,8 @@ header, footer, main, section {
   position: relative;
   display: block;
   padding: 0 0 0.625em 2em;
-  float:left;
-  width:100%;
+  float: left;
+  width: 100%;
   /*32 / 16 = 2 */
   /*10 / 16 = 0.625;*/
 }
