Convert em to rem for social media icons width

--- a/css/screen.css
+++ b/css/screen.css
@@ -238,8 +238,8 @@ header, footer, main, section {
 }
 
 .facebook, .linkedin {
-  width: 1em;
-  height: 1em;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .facebook {
