--- a/css/screen.css
+++ b/css/screen.css
@@ -563,6 +563,14 @@ header, footer, main, section {
 @media screen and (min-width: 768px) {}
 
 @media screen and (min-width: 1024px) {
+  #header {
+    padding: 1em 5%;
+  }
+  #header h1 {
+    font-size: 2em;
+    width: 9.625rem;
+    /* 154 / 16 = 9.625*/
+  }
   #nav {
     position: relative;
     top: auto;
@@ -573,12 +581,8 @@ header, footer, main, section {
     z-index: auto;
     box-shadow: none;
     padding-right: 0;
+    padding-bottom: 0;
     text-align: center;
-  }
-  #header h1 {
-    font-size: 2em;
-    width: 9.625rem;
-    /* 154 / 16 = 9.625*/
   }
   #nav li {
     display: inline;
