--- a/css/screen.css
+++ b/css/screen.css
@@ -78,7 +78,7 @@ html {
 }
 
 h1, h2 {
-  font-family: Oswald, Helvetica, Arial, serif;
+  font-family: Oswald, Helvetica, Arial, sans-serif;
 }
 
 h1 {
