Add basehold.it link to fix font size and paddings

--- a/css/screen.css
+++ b/css/screen.css
@@ -22,6 +22,11 @@ html, .stylelint {
   line-height: 1
 }
 
+body {
+  float: left;
+  width: 100%;
+}
+
 body, .stylelint {
   line-height: inherit
 }
