--- a/css/screen.css
+++ b/css/screen.css
@@ -453,11 +453,11 @@ article li li ol {
   text-transform: uppercase;
 }
 
-.portfolio .portfolio-entry {
+/*.portfolio .portfolio-entry {
   float: left;
   width: 100%;
   padding: 0.625em 5%;
-}
+}*/
 
 .portfolio .portfolio-entry:nth-child(2n+1) {
   background-color: #e1e6f2;
