--- a/css/screen.css
+++ b/css/screen.css
@@ -465,7 +465,7 @@ article li li ol {
 
 .portfolio .categories li, .portfolio .team li {
   display: inline;
-  font-size: 0.875em;
+  /*font-size: 0.875em;*/
   /* 14 / 16 = 0.875 */
 }
 
