--- a/css/screen.css
+++ b/css/screen.css
@@ -525,13 +525,21 @@ article li li ol {
 
 .contact-form input, .contact-form textarea {
   padding: 0.625em;
-  margin-bottom: 0.625em;
+  margin-bottom: 1.125em;
+  background: #fff;
+  /*10 / 16 = 0.625;*/
+}
+
+.contact-form input {
+  height: 2.25em;
+  /*36 / 16 = 2.25;*/
+  margin-bottom: 1.125em;
   background: #fff;
   /*10 / 16 = 0.625;*/
 }
 
 .contact-form label {
-  margin-bottom: 0.3125em;
+  /*margin-bottom: 0.3125em;*/
   /*5 / 16 = 0.3125;*/
 }
 
