--- a/css/screen.css
+++ b/css/screen.css
@@ -517,7 +517,7 @@ article li li ol {
 }
 
 .contact-form input, .contact-form textarea, .contact-form label {
-  font-size: 1em;
+  font-size: 1rem;
   display: block;
   width: 100%;
   text-transform: uppercase;
