--- a/css/screen.css
+++ b/css/screen.css
@@ -566,7 +566,7 @@ article li li ol {
 
 @media screen and (min-width: 640px) {
   /*General*/
-  #main, #page-title {
+  .content, .page-title {
     padding: 1.125em 5%;
   }
   /* Resume */
