--- a/css/screen.css
+++ b/css/screen.css
@@ -598,7 +598,7 @@ article li li ol {
   /*Portfolio*/
   .portfolio .portfolio-entry {
     width: 50%;
-    /*padding: 1.125em 5%;*/
+    padding: 1.125em 10%;
   }
   .portfolio .portfolio-entry:nth-child(2n+1) {
     clear: left;
