Set line height according to basehold for header h1 when size goes to 2em

--- a/css/screen.css
+++ b/css/screen.css
@@ -631,6 +631,8 @@ article li li ol {
   }
   #header h1 {
     font-size: 2em;
+    line-height: 2.25em;
+    /* 36 / 16 = 2.25 */
     width: 9.625rem;
     /* 154 / 16 = 9.625*/
   }
