--- a/css/screen.css
+++ b/css/screen.css
@@ -158,6 +158,7 @@ img, video, audio {
   background-color: #fff;
   box-shadow: 0 0.3125em 0.3125em #e1e6f2;
   padding: 0.625em 5%;
+  z-index: 1;
 }
 
 #header h1 {
