--- a/css/screen.css
+++ b/css/screen.css
@@ -397,10 +397,26 @@ article li li ol {
 }
 
 #footer {
-  margin-top: 1.25em;
-  padding: 0.625em 5%;
+  margin-top: 1.125em;
+  padding: 1.125em 5%;
+  /* 18/16=1.125*/
   color: #fff;
   background-color: #010101;
+}
+
+
+/* About */
+
+.about .photo {
+  position: relative;
+}
+
+.about .photo figcaption {
+  position: absolute;
+  z-index: 1;
+  color: #fff;
+  width: 100%;
+  bottom: 0;
 }
 
 
