--- a/css/screen.css
+++ b/css/screen.css
@@ -569,14 +569,17 @@ article li li ol {
   grid-template-rows: min-content;
 }
 
-.cssgrid #main .page-title {
+.cssgrid #main .page-title, .cssgrid .content {
   float: none;
   width: auto;
 }
 
-.cssgrid .content {
-  width: auto;
-  float: none;
+.cssgrid .about {
+  grid-template-columns: 1fr 1fr;
+}
+
+.cssgrid .about .content, .cssgrid .about .photo {
+  grid-column: 1/3;
 }
 
 .cssgrid .portfolio .portfolio-entries {
@@ -599,14 +602,28 @@ article li li ol {
 */
 
 @media screen and (min-width: 640px) {
+  /* About */
+  #main.about {
+    padding-top: 0;
+  }
+  .about .content, .about .photo {
+    width: 50%;
+  }
+  .about .content {
+    margin-top: 1.125em;
+    padding: 1.125em 5%;
+  }
+  .about .photo {
+    float: left;
+  }
+  .about .photo figcaption {
+    bottom: auto;
+    top: 0;
+  }
   /* Resume */
   .resume {
     float: left;
     width: 100%;
-  }
-  .resume ul {
-    /*float: left;
-    width: 100%;*/
   }
   .resume .skills-group {
     float: left;
